[package]
name = "nip44"
version = "0.1.0"
description = "nostr NIP-44 encryption code"
authors = ["Mike Dilger <mike@mikedilger.com>"]
license = "MIT"
repository = "https://github.com/mikedilger/nip44"
homepage = "https://github.com/mikedilger/nip44"
readme = "README.md"
edition = "2021"

[dependencies]
base64 = "0.22"
chacha20 = "0.9"
constant_time_eq = "0.4"
hkdf = "0.12"
hmac = "0.12"
rand_core = { version = "0.9", features = [ "os_rng" ] }
secp256k1 = { version = "0.31" }
sha2 = "0.10"
thiserror = "2.0"

[dev-dependencies]
hex = "0.4"
secp256k1 = { version = "0.31", features = [ "global-context" ] }
serde_json = "*"
